<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".Activity.VegDetailsActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleTextAppearance="@android:color/transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/d_headerImageView"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="centerCrop"
                        android:transitionName="@string/transition_name"
                        app:layout_collapseMode="parallax" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/scrim" />

                </FrameLayout>


                <android.support.v7.widget.Toolbar
                    android:id="@+id/d_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ToolbarTheme"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />


            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:paddingBottom="26sp"
                app:cardElevation="5dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/whattolookfor"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/what_to_look_for" />

                    <TextView
                        android:id="@+id/wtlfBody"
                        style="@style/BodyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:padding="4dp" />


                    <TextView
                        android:id="@+id/availability"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/availability" />

                    <TextView
                        android:id="@+id/avaBody"
                        style="@style/BodyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:padding="4dp" />


                    <TextView
                        android:id="@+id/store"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/store" />

                    <TextView
                        android:id="@+id/storeBody"
                        style="@style/BodyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:padding="4dp" />


                    <TextView
                        android:id="@+id/howtoprepare"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/how_to_prepare" />

                    <TextView
                        android:id="@+id/htpBody"
                        style="@style/BodyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:padding="4dp" />

                    <TextView
                        android:id="@+id/waystoeat"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/ways_to_eat" />

                    <TextView
                        android:id="@+id/wteBody"
                        style="@style/BodyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:padding="4dp" />

                    <TextView
                        android:id="@+id/cookingmethod"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/cooking_methods" />

                    <TextView
                        android:id="@+id/cmBody"
                        style="@style/BodyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:padding="4dp" />

                    <TextView
                        android:id="@+id/retailing"
                        style="@style/TitleText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="4dp"
                        android:padding="4dp"
                        android:text="@string/retailing" />

                    <TextView
                        android:id="@+id/retalBody"
                        style="@style/BodyText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="4dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="4dp"
                        android:padding="4dp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>
</android.support.constraint.ConstraintLayout>